# serial-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  server.json
.github/workflows/: cicd.yml
docs/: concepts.md  tools.md
examples/demo-device/: README.md  demo-device-spec.md  demo_device_plugin.py  pty_server.py
examples/pty-demo/: README.md  demo_device.py  pty-demo-spec.md  pty_demo_plugin.py  pty_server.py
examples/uart-demo/: README.md  demo_device.py  uart-demo-spec.md  uart_server.py
serial_mcp_server/: __init__.py  __main__.py  handlers_introspection.py  handlers_plugin.py  handlers_serial.py  handlers_spec.py  handlers_trace.py  helpers.py  mirror.py  plugins.py  server.py  specs.py  state.py  trace.py
tests/: conftest.py  test_handlers_introspection.py  test_handlers_serial.py  test_mirror.py  test_plugins.py  test_server.py  test_specs.py  test_state.py  test_trace.py
tools/: serial_cli.py
